dbflow突っ込んだ

--- a/Kotlin/app/build.gradle
+++ b/Kotlin/app/build.gradle
@@ -53,4 +53,9 @@ dependencies {
     kapt "android.arch.lifecycle:compiler:1.0.0"
 
     kapt "com.android.databinding:compiler:3.0.1"
+
+    def dbflow_version = '4.0.3'
+    annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+    implementation "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+    implementation "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
 }
