いろいろいじった

--- a/Kotlin/app/src/main/AndroidManifest.xml
+++ b/Kotlin/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".presentation.view.activity.MainActivity">
+        </activity>
+        <activity android:name=".presentation.view.activity.UserListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
